Added default admin user; new controller entry managing admin/user view; sequences to books, roles and user tables;